changes to css to fix double scrolling issue on mobile, and then fixing a subsequent issue with the homepage

--- a/src/App.css
+++ b/src/App.css
@@ -28,8 +28,7 @@ a {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100vh;
-  min-height: 900px;
+  min-height: 100vh;
   width: auto;
   min-width: 320px;
   background-color: black;
@@ -45,12 +44,11 @@ a {
 
 .main-block {
   display: flex;
-  height: 70%;
+  height: 80vh;
   width: 80%;
   justify-content: center;
   align-items: center;
   min-height: 700px;
-  max-height: 80vh;
 }
 
 .content, .profile-photo {
@@ -75,7 +73,6 @@ a {
 }
 
 .contact-me {
-  margin: 10px 0 0 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -136,6 +133,7 @@ a {
     justify-content: center;
     text-align: center;
     height: 85%;
+    align-items: flex-start;
   }
   .content, .profile-photo {
     margin: 4%;
